--- a/ui/templates/home.html
+++ b/ui/templates/home.html
@@ -1,10 +1,17 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="ja">
 
 <head>
     <meta charset="UTF-8">
-    <title>{% block title %}ホームページ{% endblock %}</title>
+    <title>ホームページ</title>
+    <!-- TailwindCSS -->
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+    <!-- Quill -->
+    <!--link href="https://cdn.quilljs.com/1.3.6/quill.snow.css" rel="stylesheet"-->
+    <!--script src="https://cdn.quilljs.com/1.3.6/quill.js"></script-->
+    <!-- あなたのスクリプト -->
+    <!--script src="{% static 'ui/editor.js' %}"></script-->
 </head>
 
 <body class="bg-gray-50">
@@ -14,7 +21,11 @@
     </header>
     <nav class="flex gap-8 bg-gray-800 p-6">
         <a href="/" class="bg-gray-200 p-3" href>ダッシュボード</a>
-        <a href="/prediction-1" class="bg-gray-200 p-3" href>予想1</a>
+        <a href="/prediction-1" class="bg-gray-200 p-3" href>事前予想</a>
+        <a href="/prediction-2" class="bg-gray-200 p-3" href>直前予想</a>
+        <a href="/report" class="bg-gray-200 p-3" href>予想結果</a>
+        <a href="/result" class="bg-gray-200 p-3" href>結果画面作成</a>
+        <a href="/media" class="bg-gray-200 p-3" href>メディア</a>
         <a href="/config" class="bg-gray-200 p-3" href>設定</a>
     </nav>
     <main class="p-6">
